fix (scrollbar): when 'width: 100%' & 'margin: 0 1em' exist at the same time, it will cause x-scroll bar appears and change the page size.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,4 +6,15 @@
 
 body {
   background: transparent;
+  /* overflow-y: hidden;
+  overflow-x: hidden;
+  margin-left: calc(100vw - 100%);
+
+  min-height: 100vh;
+  min-height: -webkit-fill-available; */
 }
+/* 
+html {
+  min-height: -webkit-fill-available;
+}
+ */
